--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@rbxts/rbxts-hax",
+  "name": "@rbxts/hax",
   "version": "1.0.1",
   "description": "",
   "main": "types/core.d.ts",
